[package]
name = "clockwork-anchor-gen"
version = "0.3.1"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = [""]
repository = "https://github.com/clockwork-xyz/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]
readme = "../../README.md"

[lib]
name = "clockwork_anchor_gen"
path = "src/lib.rs"

[features]
compat-program-result = [
  "clockwork-anchor-generate-cpi-crate/compat-program-result",
  "clockwork-anchor-generate-cpi-interface/compat-program-result"
]

[dependencies]
clockwork-anchor-generate-cpi-crate = { version = "0.3.0", path = "../anchor-generate-cpi-crate" }
clockwork-anchor-generate-cpi-interface = { version = "0.3.0", path = "../anchor-generate-cpi-interface" }
