[package]
name = "clockwork-anchor-generate-cpi-crate"
version = "0.3.1"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = [""]
repository = "https://github.com/clockwork-xyz/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]
readme = "../../README.md"

[lib]
name = "clockwork_anchor_generate_cpi_crate"
path = "src/lib.rs"
proc-macro = true

[features]
compat-program-result = ["clockwork-anchor-idl/compat-program-result"]

[dependencies]
clockwork-anchor-idl = { version = "0.3.0", path = "../anchor-idl" }
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anchor-lang = "0.27.0"
